SCAP2022-142: Added energy portal access to SCAP (#124)
* Added energy portal access to SCAP

* Changed application properties for EP-Access Bean