@@ -1,7 +1,10 @@
 package uk.co.nstauthority.scap.permissionmanagement.industry;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -10,17 +13,28 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.view;
 import static org.springframework.web.servlet.mvc.method.annotation.MvcUriComponentsBuilder.on;
 import static uk.co.nstauthority.scap.authentication.TestUserProvider.user;
+import static uk.co.nstauthority.scap.utils.ControllerTestingUtil.redirectUrl;
 
+import java.util.Collections;
 import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.validation.BeanPropertyBindingResult;
+import uk.co.fivium.digital.energyportalteamaccesslibrary.team.EnergyPortalAccessService;
+import uk.co.fivium.digital.energyportalteamaccesslibrary.team.InstigatingWebUserAccountId;
+import uk.co.fivium.digital.energyportalteamaccesslibrary.team.ResourceType;
+import uk.co.fivium.digital.energyportalteamaccesslibrary.team.TargetWebUserAccountId;
+import uk.co.nstauthority.scap.authentication.UserDetailService;
 import uk.co.nstauthority.scap.configuration.SamlProperties;
+import uk.co.nstauthority.scap.energyportal.EnergyPortalUserDto;
 import uk.co.nstauthority.scap.energyportal.EnergyPortalUserService;
 import uk.co.nstauthority.scap.mvc.ReverseRouter;
 import uk.co.nstauthority.scap.permissionmanagement.AddTeamMemberForm;
+import uk.co.nstauthority.scap.permissionmanagement.RolePermission;
 import uk.co.nstauthority.scap.permissionmanagement.teams.AddTeamMemberValidator;
+import uk.co.nstauthority.scap.permissionmanagement.teams.TeamMemberService;
 import uk.co.nstauthority.scap.utils.EnergyPortalUserDtoTestUtil;
 
 @ContextConfiguration(classes = IndustryAddMemberController.class)
@@ -33,12 +47,27 @@ class IndustryAddMemberControllerTest extends AbstractIndustryTeamControllerTest
   EnergyPortalUserService energyPortalUserService;
 
   @MockBean
+  EnergyPortalAccessService energyPortalAccessService;
+
+  @MockBean
   SamlProperties samlProperties;
+
+  private static final EnergyPortalUserDto energyPortalDto = EnergyPortalUserDtoTestUtil.Builder().build();
+
+  private AddTeamMemberForm form;
+
+  private BeanPropertyBindingResult bindingResult;
+
+  private void setupMocks() {
+    form = new AddTeamMemberForm();
+    bindingResult = new BeanPropertyBindingResult(form, "form");
+    when(samlProperties.getRegistrationUrl()).thenReturn("test-test.com");
+    when(energyPortalUserService.findUsersByUsername(any())).thenReturn(List.of(energyPortalDto));
+  }
 
   @Test
   void renderAddMember() throws Exception {
-    when(samlProperties.getRegistrationUrl()).thenReturn("test-test.com");
-
+    setupMocks();
     mockMvc.perform(get(ReverseRouter.route(on(IndustryAddMemberController.class)
         .renderAddTeamMember(teamId)))
         .with(user(testUser)))
@@ -48,20 +77,49 @@ class IndustryAddMemberControllerTest extends AbstractIndustryTeamControllerTest
 
   @Test
   void addMemberToTeam_ValidationSucceeds_rendersAddRoles() throws Exception {
-    var energyPortalDto = EnergyPortalUserDtoTestUtil.Builder().build();
-    var form = new AddTeamMemberForm();
-    var bindingResult = new BeanPropertyBindingResult(form, "form");
+    setupMocks();
+    mockMvc.perform(post(ReverseRouter.route(on(IndustryAddMemberController.class)
+            .addMemberToTeamSubmission(teamId, form, bindingResult)))
+            .with(user(testUser))
+            .with(csrf()))
+        .andExpect(status().is3xxRedirection())
+        .andExpect(redirectUrl("/permission-management/industry/%s/add-member/%s/roles"
+            .formatted(teamId.uuid().toString(), energyPortalDto.webUserAccountId())));
+  }
 
-    when(samlProperties.getRegistrationUrl()).thenReturn("test-test.com");
-    when(energyPortalUserService.findUsersByUsername(any())).thenReturn(List.of(energyPortalDto));
+  @Test
+  void addMemberToTeam_FirstTeam_GetEnergyPortalAccess()  throws Exception {
+    setupMocks();
+    when(teamMemberService.getAllPermissionsForUser(testUser.wuaId())).thenReturn(Collections.emptyList());
 
     mockMvc.perform(post(ReverseRouter.route(on(IndustryAddMemberController.class)
             .addMemberToTeamSubmission(teamId, form, bindingResult)))
             .with(user(testUser))
             .with(csrf()))
         .andExpect(status().is3xxRedirection())
-        .andExpect(view().name(
-            "redirect:/permission-management/industry/%s/add-member/%s/roles"
-                .formatted(teamId.uuid().toString(), energyPortalDto.webUserAccountId())));
+        .andExpect(redirectUrl("/permission-management/industry/%s/add-member/%s/roles"
+            .formatted(teamId.uuid().toString(), energyPortalDto.webUserAccountId())));
+
+    verify(energyPortalAccessService).addUserToAccessTeam(any(ResourceType.class),
+        any(TargetWebUserAccountId.class),
+        any(InstigatingWebUserAccountId.class));
+  }
+
+  @Test
+  void addMemberToTeam_AlreadyHasAccess_NoCallToEPAccess()  throws Exception {
+    setupMocks();
+    when(teamMemberService.getAllPermissionsForUser(anyLong())).thenReturn(List.of(RolePermission.SUBMIT_SCAP));
+
+    mockMvc.perform(post(ReverseRouter.route(on(IndustryAddMemberController.class)
+            .addMemberToTeamSubmission(teamId, form, bindingResult)))
+            .with(user(testUser))
+            .with(csrf()))
+        .andExpect(status().is3xxRedirection())
+        .andExpect(redirectUrl("/permission-management/industry/%s/add-member/%s/roles"
+            .formatted(teamId.uuid().toString(), energyPortalDto.webUserAccountId())));
+
+    verify(energyPortalAccessService, never()).addUserToAccessTeam(any(ResourceType.class),
+        any(TargetWebUserAccountId.class),
+        any(InstigatingWebUserAccountId.class));
   }
 }
